update java usage, add check for misplaced converter annotation